# VeriExCiting

./: .gitignore  README.md  environment.yml  main.py  pyproject.toml  requirements.txt  streamlit_app.py  veriexcite.py
.github/: FUNDING.yml
images/: .$flowchart.drawio.bkp  flowchart.drawio
